--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -88,6 +88,11 @@ on:
         description: "Is this a daily or weekly backup?"
         required: true
         type: string
+      DeleteDefunct:
+        description:  "Delete backups for DBIDs no longer in use"
+        required: false
+        type: string
+        default: "no"
 
   push:
     branches:
@@ -118,9 +123,9 @@ jobs:
       TargetAccount: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetAccount || (github.event_name == 'schedule' && inputs.TargetAccount || (github.event_name == 'push' && 'delius_core_development_dev'))) }}"
       TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost || (github.event_name == 'schedule' && inputs.TargetHost || (github.event_name == 'push' && 'delius_primarydb'))) }}"
       Period: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.Period || (github.event_name == 'schedule' && inputs.Period || (github.event_name == 'push' && 'daily')))  }}"
-      FixAbsentChunks: "${{ github.event.inputs.FixAbsentChunks == '' && 'yes' || github.event.inputs.FixAbsentChunks }}"
-      DeleteDefunct: "${{ (github.event.inputs.DeleteDefunct == '' && 'yes' || github.event.inputs.DeleteDefunct) }}"
-      EnableTrace: "${{ github.event.inputs.EnableTrace == '' && 'no' || github.event.inputs.EnableTrace }}"
+      FixAbsentChunks: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.FixAbsentChunks || 'yes' }}"
+      DeleteDefunct: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.DeleteDefunct || (github.event_name == 'schedule' && inputs.DeleteDefunct || 'no')) }}"
+      EnableTrace: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.EnableTrace || 'no' }}"
     continue-on-error: false
     steps:
 
@@ -154,18 +159,18 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Start Ansible Backup
-      #   run: |
-      #     $backup_command -i $inventory \
-      #     -e rman_target=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }} \
-      #     -e daily_weekly=$Period \
-      #     -e enable_trace=$EnableTrace
+      - name: Start Ansible Backup
+        run: |
+          $backup_command -i $inventory \
+          -e rman_target=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }} \
+          -e daily_weekly=$Period \
+          -e enable_trace=$EnableTrace
 
-      # - name: Start Ansible Validate And Fix Absent Chunks
-      #   run: |
-      #     $validate_command -i $inventory \
-      #     -e rman_target=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }} \
-      #     -e fix_absent_chunks=$FixAbsentChunks
+      - name: Start Ansible Validate And Fix Absent Chunks
+        run: |
+          $validate_command -i $inventory \
+          -e rman_target=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }} \
+          -e fix_absent_chunks=$FixAbsentChunks
 
       - name: Start Ansible Delete DBIDs Not In Use
         if: ${{ env.DeleteDefunct == 'yes' }}
