--- a/playbooks/oracle_backup/validate_chunks.yml
+++ b/playbooks/oracle_backup/validate_chunks.yml
@@ -196,56 +196,56 @@
         corrupt_backup_pieces: "{{ ( corrupt_backup_pieces | default([]) ) + [ item.value.backup_piece ] }}"
       with_dict: "{{ dict_actual_vs_expected }}"
 
-    # - name: Send notification message via Slack if Missing Chunks Detected Without Previous Fix Attempt
-    #   community.general.slack:
-    #     token: "{{ getslacktoken.stdout }}"
-    #     msg: "Missing chunks detected in backuppieces {{ corrupt_backup_pieces | join(',') }}.  Attempting fix by re-running backup for these items."
-    #     channel: "{{ slack_channel }}"
-    #     username: 'Missing Backup Chunks {{ inventory_hostname }}'
-    #     icon_emoji: ':repeat:'
-    #   when:
-    #      - not ( previous_fix_attempt | default(false) )
-    #      - run_fix
-    #   delegate_to: localhost
-    #   become: no
+    - name: Send notification message via Slack if Missing Chunks Detected Without Previous Fix Attempt
+      community.general.slack:
+        token: "{{ getslacktoken.stdout }}"
+        msg: "Missing chunks detected in backuppieces {{ corrupt_backup_pieces | join(',') }}.  Attempting fix by re-running backup for these items."
+        channel: "{{ slack_channel }}"
+        username: 'Missing Backup Chunks {{ inventory_hostname }}'
+        icon_emoji: ':repeat:'
+      when:
+         - not ( previous_fix_attempt | default(false) )
+         - run_fix
+      delegate_to: localhost
+      become: no
 
-    # - name: Send notification message via Slack if Missing Chunks Detected And No Fix Attempt Specified
-    #   community.general.slack:
-    #     token: "{{ getslacktoken.stdout }}"
-    #     msg: "Missing chunks detected in backuppieces {{ corrupt_backup_pieces | join(',') }}.  No Fix will be attempted."
-    #     channel: "{{ slack_channel }}"
-    #     username: 'Missing Backup Chunks {{ inventory_hostname }}'
-    #     icon_emoji: ':x:'
-    #   when:
-    #      - not ( previous_fix_attempt | default(false) )
-    #      - not (run_fix)
-    #   delegate_to: localhost
-    #   become: no
+    - name: Send notification message via Slack if Missing Chunks Detected And No Fix Attempt Specified
+      community.general.slack:
+        token: "{{ getslacktoken.stdout }}"
+        msg: "Missing chunks detected in backuppieces {{ corrupt_backup_pieces | join(',') }}.  No Fix will be attempted."
+        channel: "{{ slack_channel }}"
+        username: 'Missing Backup Chunks {{ inventory_hostname }}'
+        icon_emoji: ':x:'
+      when:
+         - not ( previous_fix_attempt | default(false) )
+         - not (run_fix)
+      delegate_to: localhost
+      become: no
 
-#       - name: Send notification message via Slack if Missing Chunks Detected After Previous Fix Attempt
-#         community.general.slack:
-#           token: "{{ getslacktoken.stdout }}"
-#           msg: "Missing chunks detected (after fix attempt) in backuppieces {{ corrupt_backup_pieces | join(',') }}."
-#           channel: "{{ slack_channel }}"
-#           username: 'Missing Backup Chunks {{ inventory_hostname }}'
-#           icon_emoji: ':x:'
-#         when:
-#            - ( previous_fix_attempt | default(false) )
-#         delegate_to: localhost
-#         become: no
+      - name: Send notification message via Slack if Missing Chunks Detected After Previous Fix Attempt
+        community.general.slack:
+          token: "{{ getslacktoken.stdout }}"
+          msg: "Missing chunks detected (after fix attempt) in backuppieces {{ corrupt_backup_pieces | join(',') }}."
+          channel: "{{ slack_channel }}"
+          username: 'Missing Backup Chunks {{ inventory_hostname }}'
+          icon_emoji: ':x:'
+        when:
+           - ( previous_fix_attempt | default(false) )
+        delegate_to: localhost
+        become: no
 
-# - name: Send notification message via Slack if Not Missing Chunks Detected After Previous Fix Attempt
-#   community.general.slack:
-#     token: "{{ getslacktoken.stdout }}"
-#     msg: "Backups with missing chunks successfully replaced by new backups."
-#     channel: "{{ slack_channel }}"
-#     username: 'Missing Backup Chunks {{ inventory_hostname }}'
-#     icon_emoji: ':white_check_mark:'
-#   when:
-#      - dict_actual_vs_expected == {}
-#      - ( previous_fix_attempt | default(false) )
-#   delegate_to: localhost
-#   become: no
+- name: Send notification message via Slack if Not Missing Chunks Detected After Previous Fix Attempt
+  community.general.slack:
+    token: "{{ getslacktoken.stdout }}"
+    msg: "Backups with missing chunks successfully replaced by new backups."
+    channel: "{{ slack_channel }}"
+    username: 'Missing Backup Chunks {{ inventory_hostname }}'
+    icon_emoji: ':white_check_mark:'
+  when:
+     - dict_actual_vs_expected == {}
+     - ( previous_fix_attempt | default(false) )
+  delegate_to: localhost
+  become: no
 
 # We not have an optional block which attempts to fix any problems with Corrupt backup sets (i.e. ones with absent chunks)
 # This block will only run if run_fix is true and if backup pieces have been found above without the correct number of chunks
@@ -421,15 +421,15 @@
     - name: Set Corrupt Backupsets Unavailable
       script: run_rman_command.sh {{ database_primary_sid | default(database_standby_sid) }}  "{{ rman_catalog_connect }}" "change backupset {{ corrupt_backup_sets | join(',') }} unavailable;"
 
-    # - name: Send notification message via Slack that Fix It Job has Run
-    #   community.general.slack:
-    #     token: "{{ getslacktoken.stdout }}"
-    #     msg: "Fix-it job run to take new backups to replace existing backups with missing chunks - {{ notification }}."
-    #     channel: "{{ slack_channel }}"
-    #     username: 'Missing Backup Chunks {{ inventory_hostname }}'
-    #     icon_emoji: ':repeat_one:'
-    #   delegate_to: localhost
-    #   become: no
+    - name: Send notification message via Slack that Fix It Job has Run
+      community.general.slack:
+        token: "{{ getslacktoken.stdout }}"
+        msg: "Fix-it job run to take new backups to replace existing backups with missing chunks - {{ notification }}."
+        channel: "{{ slack_channel }}"
+        username: 'Missing Backup Chunks {{ inventory_hostname }}'
+        icon_emoji: ':repeat_one:'
+      delegate_to: localhost
+      become: no
 
   when: dict_actual_vs_expected != {} and ( run_fix )
 
