--- a/.github/workflows/oracle-db-autotasks.yml
+++ b/.github/workflows/oracle-db-autotasks.yml
@@ -51,7 +51,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/playbooks/configure_oracle_autotasks.yml
+      command: ansible-playbook playbooks/configure_oracle_autotasks.yml
       inventory: inventory/ansible
       TargetAccount: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetAccount || (github.event_name == 'push' && 'delius_core_development_dev')) }}"
       TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost || (github.event_name == 'push' && 'delius_primarydb')) }}"
@@ -64,12 +64,9 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             playbooks/configure_oracle_autotasks.yml
-          path: operations
+          path: .
           ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'DBA-528' }}
           fetch-depth: 0
-
-      - name: List operations directory 
-        run: ls -l operations/playbooks
 
       - name: Checkout Role From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -81,9 +78,6 @@ jobs:
           path: operations
           ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
-
-      - name: List operations directory 
-        run: ls -l operations operations/ansible/roles
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -97,9 +91,6 @@ jobs:
           ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
-      - name: Configure Oracle Autotasks
-        run: ls -l inventory/ansible
-
       # - name: Configure AWS Credentials
       #   id: login-aws
       #   uses: aws-actions/configure-aws-credentials@v4
@@ -108,8 +99,8 @@ jobs:
       #     aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
       #     aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Configure Oracle Autotasks
-      #   run: ls -l operations/ansible inventory/ansible
-          # export ANSIBLE_ROLES_PATH=./operations/ansible/roles
-          # $command -i $inventory -e target_hosts=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }}
+      - name: Configure Oracle Autotasks
+        run: ls -l operations/ansible inventory/ansible .
+          export ANSIBLE_ROLES_PATH=./operations/ansible/roles
+          $command -i $inventory -e target_hosts=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }}
           
