--- a/.github/workflows/oracle-db-autotasks.yml
+++ b/.github/workflows/oracle-db-autotasks.yml
@@ -52,6 +52,7 @@ jobs:
     timeout-minutes: 1440
     env:
       command: ansible-playbook operations/playbooks/configure_oracle_autotasks.yml
+      inventory: inventory/ansible
       TargetAccount: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetAccount || (github.event_name == 'push' && 'delius_core_development_dev')) }}"
       TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost || (github.event_name == 'push' && 'delius_primarydb')) }}"
     continue-on-error: false
@@ -73,24 +74,22 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
-            ansible/hosts
-            ansible/group_vars
             ansible/roles/oracle-db-autotasks
-          path: inventory
+          path: roles
           ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
-      # - name: Checkout Inventory From modernisation-platform-configuration-management
-      #   uses: actions/checkout@v4
-      #   with:
-      #     repository: ministryofjustice/modernisation-platform-configuration-management
-      #     sparse-checkout-cone-mode: false
-      #     sparse-checkout: |
-      #       ansible/hosts
-      #       ansible/group_vars
-      #     path: inventory
-      #     ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
-      #     fetch-depth: 0
+      - name: Checkout Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
+          fetch-depth: 0
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -102,6 +101,6 @@ jobs:
 
       - name: Configure Oracle Autotasks
         run: |
-          export ANSIBLE_ROLES_PATH=./inventory/ansible/roles
-          $command -i inventory/ansible -e target_hosts=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }}
+          export ANSIBLE_ROLES_PATH=./roles/ansible/roles
+          $command -i $inventory -e target_hosts=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }}
           
