--- a/.github/workflows/oracle-db-patching.yml
+++ b/.github/workflows/oracle-db-patching.yml
@@ -15,15 +15,15 @@ on:
         required: true
         type: choice
         options: 
-          "delius_primarydb"
-          "delius_standbydb1"
-          "delius_standbydb2"
-          "mis_primarydb"
-          "mis_standbydb1"
-          "misboe_primarydb"
-          "misboe_standbydb1"
-          "misdsd_primarydb"
-          "misdsd_standbydb1"
+          - "delius_primarydb"
+          - "delius_standbydb1"
+          - "delius_standbydb2"
+          - "mis_primarydb"
+          - "mis_standbydb1"
+          - "misboe_primarydb"
+          - "misboe_standbydb1"
+          - "misdsd_primarydb"
+          - "misdsd_standbydb1"
       SourceConfigVersion:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
