--- a/.github/workflows/oracle-db-patching.yml
+++ b/.github/workflows/oracle-db-patching.yml
@@ -62,16 +62,19 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      - name: List directory
+        run: ls -l 
 
-      - name: Start Oracle Patching
-        working-directory: modernisation-platform-configuration-management/ansible
-        run: |
-          no_proxy="*" ansible-playbook site.yml --limit environment_name_${{ env.TargetEnvironment }}_${{ env.TargetHost }} -e role=oracle-db-patches/oneoffpatch
+      # - name: Configure AWS Credentials
+      #   id: login-aws
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
+      #     aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
+
+      # - name: Start Oracle Patching
+      #   working-directory: modernisation-platform-configuration-management/ansible
+      #   run: |
+      #     no_proxy="*" ansible-playbook site.yml --limit environment_name_${{ env.TargetEnvironment }}_${{ env.TargetHost }} -e role=oracle-db-patches/oneoffpatch
           
