--- a/.github/workflows/oracle-db-patching.yml
+++ b/.github/workflows/oracle-db-patching.yml
@@ -50,16 +50,31 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
     timeout-minutes: 1440
     env:
+      command: ansible-playbook operations/ansible/roles/oracle-db-patches/oneoffpatch.yml
+      inventory: inventory/ansible
       TargetEnvironment: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetEnvironment || (github.event_name == 'push' && 'delius_core_development_dev')) }}"
       TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost || (github.event_name == 'push' && 'delius_primarydb')) }}"
     continue-on-error: false
     steps:
 
-      - name: Checkout modernisation-platform-configuration-management
+      - name: Checkout Role From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
           repository: ministryofjustice/modernisation-platform-configuration-management
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          path: operations
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
+          fetch-depth: 0
+
+      - name: Checkout Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -71,7 +86,5 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Start Oracle Patching
-        working-directory: ansible
-        run: |
-          no_proxy="*" ansible-playbook site.yml --limit environment_name_${{ env.TargetEnvironment }}_${{ env.TargetHost }} -e role=oracle-db-patches/oneoffpatch
+        run: $command -i $inventory -e target_host=environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }}
           
